2009-12-15  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::index (const idx_vector&)): Fix determining of
	result dimensions.

2009-12-15  Jaroslav Hajek  <highegg@gmail.com>

	* Range.cc (Range::elem, Range::checkelem, Range::index):
	New methods.
	* Range.h: Declare them.

2009-12-15  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.h (idx_vector::loop, idx_vector::bloop): Fix behavior for
	masks.

2009-12-13  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Use DISTCLEANFILES rather than distclean-local rule.
	Use PERL variable defined by autoconf rather than direct call.  Use
	simple_move_if_change rule to reduce useless compiles if OPTS_INC have not
	changed.

2009-12-12  Jaroslav Hajek  <highegg@gmail.com>

	* oct-shlib.h: Remove stray declarations.

2009-12-11  John W. Eaton  <jwe@octave.org>

	* oct-shlib.cc (octave_dlopen_shlib::octave_dlopen_shlib):
	Print filename along with message from dlerror.
	Reverse sense of test.

2009-12-09  Jaroslav Hajek  <highegg@gmail.com>

	* oct-shlib.h (octave_shlib): Rewrite.
	* oct-shlib.cc (octave_shlib): Rewrite.

2009-12-09  John W. Eaton  <jwe@octave.org>

	* oct-time.cc (octave_base_tm::strftime): Call nstrftime instead
	of my_strftime.

2009-12-09  John W. Eaton  <jwe@octave.org>

	* oct-time.cc: Include strftime.h.  Don't provide decl for strftime.
	(octave_base_tm::strftime): Call my_strftime instead of ::strftime.
	* Makefile.am (AM_CPPFLAGS): Add -I$(top_srcdir)/libgnu to the list.
	(LINK_DEPS): Add ../libgnu/libgnu.la to the list.
	(LIBOCTAVE_C_SOURCES): Remove strftime.c from the list.
	* strftime.c: Delete.

2009-12-08  Michael Goffioul  <michael.goffioul@gmail.com>

	* Array-d.cc (Array<double>::is_sorted): Declare as OCTAVE_API.
	* Array-f.cc (Array<float>::is_sorted): Ditto.
	* lo-sysdep.cc: Undef min and max after including windows.h

2009-12-05  Jaroslav Hajek  <highegg@gmail.com>

	* Array-d.cc (Array<double>::is_sorted): Optimized specialization.